--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue-next": "^0.26.26",
     "core-js": "^3.8.3",
+    "pinia": "^3.0.0",
+    "scrollreveal": "^4.0.9",
+    "swiper": "^11.2.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
